--- a/src/index.css
+++ b/src/index.css
@@ -20,10 +20,52 @@ header {
 
 main {
   display: flex;
+  gap: 1rem;
 }
 
 main > * {
   flex: 1;
+}
+
+#page {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+}
+
+#contact-info-sec > h2 {
+  text-align: center;
+}
+
+#contact-info-sec {
+  width: 100%;
+}
+
+#contact-info-sec > div {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+#school-info-sec > div {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr;
+}
+
+#graduation-date {
+  text-align: right;
+}
+
+#forms {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+form {
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
 }
 
 footer {
