--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,12 @@ main > * {
   flex: 1;
 }
 
+#schools-form {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 #page {
   background-color: whitesmoke;
   display: flex;
@@ -48,12 +54,18 @@ main > * {
 }
 
 #school-info-sec > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+#school-info-sec > div > div {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 1fr;
 }
 
-#graduation-date {
+.graduation-date {
   text-align: right;
 }
 
@@ -71,7 +83,8 @@ main > * {
   flex-direction: column;
   gap: 1rem;
 }
-form {
+
+#forms {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
