--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,8 @@ main > * {
   flex: 1;
 }
 
-#schools-form {
+#schools-form,
+#works-form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -69,9 +70,15 @@ main > * {
   text-align: right;
 }
 
-#education-info-sec > div {
+#work-info-sec > div > div {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+#work-info-sec > div {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 #work-time {
