--- a/src/index.css
+++ b/src/index.css
@@ -86,16 +86,29 @@ main {
   text-align: right;
 }
 
-#forms {
+#skills-form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
+}
+
+.skill {
+  display: flex;
+  gap: 0.25rem;
+}
+
+#skills,
+#duties {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5;
 }
 
 #forms {
   background-color: whitesmoke;
   display: flex;
   flex-direction: column;
+  gap: 2rem;
   padding: 1rem;
 }
 
@@ -132,6 +145,12 @@ form {
   margin: 0;
 }
 
+#skills-info {
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
 footer {
   display: flex;
   justify-content: center;
