--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,17 @@ main {
   padding: 1rem;
 }
 
+#contact-form,
+#schools-form,
+#works-form,
+#skills-form {
+  background-color: whitesmoke;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
 #contact-info-sec > h2 {
   text-align: center;
 }
@@ -105,11 +116,9 @@ main {
 }
 
 #forms {
-  background-color: whitesmoke;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
-  padding: 1rem;
+  gap: 1rem;
 }
 
 ul {
@@ -143,6 +152,12 @@ form {
 
 .formHeading {
   margin: 0;
+  width: fit-content;
+  padding: 5px;
+}
+
+.formHeading:hover {
+  background-color: lightgray;
 }
 
 #skills-info {
