--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,17 @@ main {
   width: 850px;
 }
 
-#schools-form,
-#works-form {
+#school-forms,
+#work-forms {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2rem;
+}
+
+#skills-form > div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
 }
 
 #page {
@@ -39,6 +45,7 @@ main {
   display: flex;
   flex-direction: column;
   padding: 1rem;
+  min-height: 650px;
 }
 
 #contact-form,
@@ -49,7 +56,7 @@ main {
   padding: 1rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
 }
 
 #contact-info-sec > h2 {
@@ -97,12 +104,6 @@ main {
   text-align: right;
 }
 
-#skills-form {
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
-}
-
 .skill {
   display: flex;
   gap: 0.25rem;
@@ -112,7 +113,7 @@ main {
 #duties {
   display: flex;
   flex-direction: column;
-  gap: 0.5;
+  gap: 0.5rem;
 }
 
 #forms {
