--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
 body {
   margin: 0;
   height: 100dvh;
+  background-color: whitesmoke;
+  color: rgb(33, 33, 33);
 }
 
 #root {
@@ -34,29 +36,31 @@ main {
   gap: 2rem;
 }
 
-#skills-form > div {
+#skills-form > div:nth-child(2) {
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
 }
 
 #page {
-  background-color: whitesmoke;
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 1rem;
   min-height: 650px;
+  border-radius: 20px;
 }
 
 #contact-form,
 #schools-form,
 #works-form,
 #skills-form {
-  background-color: whitesmoke;
+  background-color: white;
   padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  border-radius: 20px;
 }
 
 #contact-info-sec > h2 {
@@ -151,14 +155,25 @@ form {
   gap: 0.5rem;
 }
 
+.headingContainer {
+  display: flex;
+  align-items: center;
+}
+
+svg {
+  height: 30px;
+}
+
 .formHeading {
   margin: 0;
   width: fit-content;
   padding: 5px;
 }
 
-.formHeading:hover {
-  background-color: lightgray;
+.headingContainer:hover {
+  width: fit-content;
+  background-color: whitesmoke;
+  border-radius: 10px;
 }
 
 #skills-info {
@@ -170,6 +185,7 @@ form {
 footer {
   display: flex;
   justify-content: center;
+  padding: 1rem 0;
 }
 
 @media (max-width: 900px) {
