--- a/src/index.css
+++ b/src/index.css
@@ -183,10 +183,20 @@ svg {
   justify-content: space-between;
   flex-wrap: wrap;
 }
+
 footer {
   display: flex;
   justify-content: center;
   padding: 1rem 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+a:hover {
+  cursor: pointer;
 }
 
 @media (max-width: 900px) {
