--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,11 @@
 body {
   margin: 0;
   height: 100dvh;
-
   background-color: whitesmoke;
 }
 
 #root {
-  height: 100dvh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
